{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 124,
  "lineage": "aa0d2bcd-02f4-fb9c-cc16-7a099bbc6c61",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:774153408931:network-acl/acl-088922968f4fc473f",
            "default_network_acl_id": "acl-088922968f4fc473f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-088922968f4fc473f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "774153408931",
            "subnet_ids": [
              "subnet-01948518cbb290b6b",
              "subnet-0575bd698c19a0d99",
              "subnet-062102aba2e92749a",
              "subnet-09c3e0e870c8b1174",
              "subnet-0a6a45cdc84b868e0",
              "subnet-0eaba0674f85582e1"
            ],
            "tags": {
              "Name": "my-eks-vpc-default"
            },
            "tags_all": {
              "Name": "my-eks-vpc-default"
            },
            "vpc_id": "vpc-0dd680fe62b90524e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:774153408931:route-table/rtb-04560b5e970fba414",
            "default_route_table_id": "rtb-04560b5e970fba414",
            "id": "rtb-04560b5e970fba414",
            "owner_id": "774153408931",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-eks-vpc-default"
            },
            "tags_all": {
              "Name": "my-eks-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0dd680fe62b90524e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:774153408931:security-group/sg-05e896309ce221341",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-05e896309ce221341",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "774153408931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-vpc-default"
            },
            "tags_all": {
              "Name": "my-eks-vpc-default"
            },
            "vpc_id": "vpc-0dd680fe62b90524e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:774153408931:internet-gateway/igw-0b9ad743eab031862",
            "id": "igw-0b9ad743eab031862",
            "owner_id": "774153408931",
            "tags": {
              "Name": "my-eks-vpc"
            },
            "tags_all": {
              "Name": "my-eks-vpc"
            },
            "vpc_id": "vpc-0dd680fe62b90524e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b9ad743eab031862",
            "id": "r-rtb-0e63418b4d3fc92551080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e63418b4d3fc9255",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:774153408931:route-table/rtb-0e58ea7f018470987",
            "id": "rtb-0e58ea7f018470987",
            "owner_id": "774153408931",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-eks-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "my-eks-vpc-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd680fe62b90524e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:774153408931:route-table/rtb-0ca7cbe42be6abb35",
            "id": "rtb-0ca7cbe42be6abb35",
            "owner_id": "774153408931",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-eks-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "my-eks-vpc-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd680fe62b90524e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:774153408931:route-table/rtb-0f6b65318e80d4ee9",
            "id": "rtb-0f6b65318e80d4ee9",
            "owner_id": "774153408931",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-eks-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "my-eks-vpc-private-us-east-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd680fe62b90524e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:774153408931:route-table/rtb-0e63418b4d3fc9255",
            "id": "rtb-0e63418b4d3fc9255",
            "owner_id": "774153408931",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9ad743eab031862",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-eks-vpc-public"
            },
            "tags_all": {
              "Name": "my-eks-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd680fe62b90524e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed4554cc508b569c",
            "route_table_id": "rtb-0e58ea7f018470987",
            "subnet_id": "subnet-0a6a45cdc84b868e0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3986643e74e245b",
            "route_table_id": "rtb-0ca7cbe42be6abb35",
            "subnet_id": "subnet-062102aba2e92749a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae6848592d55bd9d",
            "route_table_id": "rtb-0f6b65318e80d4ee9",
            "subnet_id": "subnet-0eaba0674f85582e1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bc68955691105b6",
            "route_table_id": "rtb-0e63418b4d3fc9255",
            "subnet_id": "subnet-01948518cbb290b6b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c37808a0decd431f",
            "route_table_id": "rtb-0e63418b4d3fc9255",
            "subnet_id": "subnet-0575bd698c19a0d99"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073aa53064b77580c",
            "route_table_id": "rtb-0e63418b4d3fc9255",
            "subnet_id": "subnet-09c3e0e870c8b1174"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:774153408931:subnet/subnet-0a6a45cdc84b868e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6a45cdc84b868e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "774153408931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "my-eks-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-0dd680fe62b90524e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:774153408931:subnet/subnet-062102aba2e92749a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062102aba2e92749a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "774153408931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "my-eks-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-0dd680fe62b90524e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:774153408931:subnet/subnet-0eaba0674f85582e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eaba0674f85582e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "774153408931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "my-eks-vpc-private-us-east-1c"
            },
            "vpc_id": "vpc-0dd680fe62b90524e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:774153408931:subnet/subnet-01948518cbb290b6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01948518cbb290b6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "774153408931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "my-eks-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-0dd680fe62b90524e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:774153408931:subnet/subnet-0575bd698c19a0d99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0575bd698c19a0d99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "774153408931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "my-eks-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-0dd680fe62b90524e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:774153408931:subnet/subnet-09c3e0e870c8b1174",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c3e0e870c8b1174",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "774153408931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-vpc-public-us-east-1c"
            },
            "tags_all": {
              "Name": "my-eks-vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-0dd680fe62b90524e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:774153408931:vpc/vpc-0dd680fe62b90524e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-088922968f4fc473f",
            "default_route_table_id": "rtb-04560b5e970fba414",
            "default_security_group_id": "sg-05e896309ce221341",
            "dhcp_options_id": "dopt-05c4f1588331861b6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd680fe62b90524e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04560b5e970fba414",
            "owner_id": "774153408931",
            "tags": {
              "Name": "my-eks-vpc"
            },
            "tags_all": {
              "Name": "my-eks-vpc"
            }
          }
        }
      ]
    }
  ]
}